[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/Script/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Asset/Scene/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/Texture/Bullet/slazzer-edit-image.png" type="Texture" id=3]
[ext_resource path="res://Asset/Texture/Bullet/3/Cosmic_11.png" type="Texture" id=4]
[ext_resource path="res://Asset/Texture/Bullet/bar.svg" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShootEfect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShootEfect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.09, 0.09 ), Vector2( 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/path = NodePath("reload:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reload:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.2 ), Vector2( 0.5, 0.2 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_stop_reload"
} ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="reload" type="Sprite" parent="."]
visible = false
position = Vector2( -45.375, -56 )
scale = Vector2( 0.5, 0.2 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.16, 0.106667 )
texture = ExtResource( 4 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 28, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 38, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ShootEfect" type="Sprite" parent="."]
visible = false
modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
position = Vector2( 18, 1.19209e-07 )
rotation = -3.14159
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )
anims/reload = SubResource( 2 )
